--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,6 @@
 issues:
   exclude-dirs:
-    - lib/ringbuf # todo menglc [代码未完善]
+    #- lib/ringbuf # todo menglc [代码未完善]
     - lib/protobuf # todo menglc [代码未完善]
 linters:
   enable:
