--- a/tools/client.simulator/bin/config.default.json
+++ b/tools/client.simulator/bin/config.default.json
@@ -1,19 +1,13 @@
 {
 	"desc": [
 		"addr:服务器地址 ip:port",
-		"proto:服务端proto协议 1:protoBuffer 2:json",
-		"codec:服务端编码类型 1:standard 2:keep",
-		"errorProcessMethod:通用错误rpc的方法名，返回的msg固定是ErrorInfo",
 		"protoFileConfig:{",
 		"  path:proto路径和文件配置",
 		"  files: ‘path’路径下的 grpc api proto文件路径",
 		"}",
-		"ignoreMethod:需要忽略的rpc回包或者notify，忽略后将不打印相关信息"
+		"ignoreMsgID:需要忽略的 msgID, 忽略后将不打印相关信息"
 	],
-	"addr": "192.168.243.151:12345",
-	"codec": 2,
-	"proto": 1,
-	"errorProcessMethod": "",
+	"addr": "127.0.0.1:30201",
 	"protoFileConfig": {
 		"path": "../../proto",
 		"files": [
@@ -31,5 +25,6 @@
 			"union/union.proto"
 		]
 	},
-	"ignoreMethod": []
+	"ignoreMsgID": [
+	]
 }
